plein de modifs

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -9,25 +9,25 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
 	<body>
 		<header class="header">
-			<div class="header__icon">
-                <a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
-                </div>
-            <h1 class="header__logo">ohmyfood</h1>
+            <div class="header__icon">
+			<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
+            </div>
+			<h1 class="header__logo">ohmyfood</h1>
 		</header>
 		<main>
 			<div class="background">
-				<img class="background__picture" src="layout/composants/images/bistrootdupotager.jpeg">
+				<img class="background__picture" src="layout/composants/images/alafrancaise.jpg">
 			</div>
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
-						Le Bistrot du potager
+						À la française
 					</div>
 					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
@@ -39,9 +39,9 @@
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Soupe de fêves basques</h4>
+								<h4 class="foodcard__title">Tartare de poulpe acidulé</h4>
 								<p class="foodcard__description">
-									Au piment d'Espelette
+									Aux zestes d'orange
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -53,9 +53,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Foie gras de canard mi-cuit</h4>
+								<h4 class="foodcard__title">Velouté de légumes d'antan</h4>
 								<p class="foodcard__description">
-									À la truffe blanche
+									Carotte, panais, topinambour
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -67,9 +67,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Oeuf poché</h4>
+								<h4 class="foodcard__title">Soupe à l'oignon</h4>
 								<p class="foodcard__description">
-									Et sa panelure d'osso-iraty
+									Revisitée
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -84,9 +84,9 @@
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Côte de boeuf à l'ail des ours</h4>
+								<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
 								<p class="foodcard__description">
-									frites de patate douce
+									Accompagnées d'une purée de panais
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -98,9 +98,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Agneau en croute</h4>
+								<h4 class="foodcard__title">Magret de canard</h4>
 								<p class="foodcard__description">
-									Aux vieux légumes
+									Et parmentier de pommes de terre
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -112,9 +112,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Filet de bonito</h4>
+								<h4 class="foodcard__title">Pigeonneau d’Ille-et-Vilaine</h4>
 								<p class="foodcard__description">
-									À l'orange sanguine
+									Sur son lit de gnocchis aux légumes
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -129,9 +129,9 @@
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Gâteau basque</h4>
+								<h4 class="foodcard__title">Pétales de violettes glacés</h4>
 								<p class="foodcard__description">
-									Revisité
+									Et purée de noisettes
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -143,9 +143,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Macaron au chocolat d'exception</h4>
+								<h4 class="foodcard__title">Fondant au chocolat</h4>
 								<p class="foodcard__description">
-									Et glace vanille
+									revisité
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -157,9 +157,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Mousse au chocolat</h4>
+								<h4 class="foodcard__title">Millefeuille croustillant</h4>
 								<p class="foodcard__description">
-									Au piment d'Espelette
+									Myrtilles et pâte d’amande
 								</p>
 							</div>
 							<p class="foodcard__price">
