--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="localisation__icon">
 				<i class="fas fa-map-marker-alt"></i>
 				</div>
-				<span class="localisation__text">Lyon, Croix Rousse</span>
+				<span class="localisation__text">Paris, Belleville</span>
 			</section>
 			<!-- Section explore-->
 			<section class="explore">
@@ -48,9 +48,9 @@
 						<i class="fas fa-list-ul fonctionnement__icone"></i>
 						<span class="fonctionnement__texte">Composez votre menu</span>
 					</li>
-					<li class="fonctionnement__carte">
+					<li class="fonctionnement__carte active">
 						<i class="fas fa-store fonctionnement__icone"></i>
-						<span class="fonctionnement__texte">Choisissez un restaurant</span>
+						<span class="fonctionnement__texte">Dégustez au restaurant </span>
 					</li>
 				</ol>
 			</section>
@@ -59,16 +59,16 @@
 				<h2 class="restaurants__headtitle">Restaurants</h2>
 				<div class="restaurants__cartecontainer">
 					<div class="restaurants__cartes carte1">
-						<a class="restaurants__carteslink" href="lesapothicaires.html">
+						<a class="restaurants__carteslink" href="lapalettedugout.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/lesapothicaires.jpeg" alt class="restaurants__carteimage"/>
+								<img src="layout/composants/images/Lapalettedugout.jpg" alt class="restaurants__carteimage"/>
 								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
 								<div class="restaurants__info">
-								<h3 class="restaurants__title">Les apothicaires</h3>
+								<h3 class="restaurants__title">La palette du goût</h3>
 								<span class="restaurants__quartier">
-									Gerland
+									Ménilmontant
 								</span>
 								</div>	
 								<div class="restaurants__menufavorite">
@@ -79,15 +79,15 @@
 						</a>
 					</div>
 					<div class="restaurants__cartes carte2">
-						<a class="restaurants__carteslink" href="bistrotdupotager.html">
+						<a class="restaurants__carteslink" href="lanotenenchantee.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="restaurants__carteimage"/>
+								<img src="layout/composants/images/lanotenechantee.jpg" alt class="restaurants__carteimage"/>
 								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
-								<h3 class="restaurants__title">Le bistrot du potager</h3>
+								<h3 class="restaurants__title">La note enchantée</h3>
 								<div class="restaurants__quartier">
-									Gerland
+									Charonne
 								</div>
 								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
@@ -97,15 +97,14 @@
 						</a>
 					</div>
 					<div class="restaurants__cartes carte3">
-						<a class="restaurants__carteslink" href="cozna.html">
+						<a class="restaurants__carteslink" href="alafrancaise.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/cozna.jpeg" alt class="restaurants__carteimage"/>
-								<span class="restaurants__legend">Nouveau</span>
+								<img src="layout/composants/images/alafrancaise.jpg" alt class="restaurants__carteimage"/>
 							</header>
 							<footer>
-								<h3 class="restaurants__title">Cozna</h3>
+								<h3 class="restaurants__title">À la française</h3>
 								<div class="restaurants__quartier">
-									Sainte Claire
+									Cité rouge
 								</div>
 								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
@@ -115,15 +114,14 @@
 						</a>
 					</div>
 					<div class="restaurants__cartes carte4">
-						<a class="restaurants__carteslink" href="tetedoie.html">
+						<a class="restaurants__carteslink" href="ledelicedessens.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/tetedoie.jpeg" alt class="restaurants__carteimage"/>
-								<span class="restaurants__legend">Nouveau</span>
+								<img src="layout/composants/images/ledelicedessens.jpg" alt class="restaurants__carteimage"/>
 							</header>
 							<footer>
-								<h3 class="restaurants__title">Tête d'oie</h3>
+								<h3 class="restaurants__title">Le délice des sens</h3>
 								<div class="restaurants__quartier">
-									Saint George
+									Folie Méricourt
 								</div>
 								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
