--- a/lanotenenchantee.html
+++ b/lanotenenchantee.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
@@ -20,12 +20,12 @@
 		</header>
 		<main>
 			<div class="background">
-				<img class="background__picture" src="layout/composants/images/tetedoie.jpeg">
+				<img class="background__picture" src="layout/composants/images/lanotenechantee.jpg">
 			</div>
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
-						Tête d'oie
+						La note enchantée
 					</div>
 					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
@@ -37,9 +37,9 @@
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tartare de thon</h4>
+								<h4 class="foodcard__title">Ravioles de foie gras </h4>
 								<p class="foodcard__description">
-									Assaisonné au yuzu
+									Accompagnés de leur crème à la truffe
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -51,13 +51,13 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Homard bleu</h4>
+								<h4 class="foodcard__title">Caviar osciètre </h4>
 								<p class="foodcard__description">
-									Et algues diverses
+									Sur blini à la farine de blé noir
 								</p>
 							</div>
 							<p class="foodcard__price">
-								35€
+								20€
 							</p>
 							<div class="checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
@@ -65,13 +65,27 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Velouté de cèpes </h4>
+								<h4 class="foodcard__title">Homard et espuma de potiron</h4>
 								<p class="foodcard__description">
-									Aux truffes
+									Mariné aux zestes d'orange
 								</p>
 							</div>
 							<p class="foodcard__price">
 								20€
+							</p>
+							<div class="checkcircle">
+								<i class="fas fa-check-circle iconecercle"></i>
+							</div>
+						</div>
+						<div class="foodcard">
+							<div class="foodcard__text">
+								<h4 class="foodcard__title">Foie gras de canard cuit entier</h4>
+								<p class="foodcard__description">
+									Confiture de figue et pain toasté
+								</p>
+							</div>
+							<p class="foodcard__price">
+								35€
 							</p>
 							<div class="checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
@@ -82,9 +96,9 @@
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Lapin cuit au foin</h4>
+								<h4 class="foodcard__title">Noix de coquilles Saint-Jacques/h4>
 								<p class="foodcard__description">
-									Sauce teriyaki
+									Sur lit de purée de céleri-rave
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -96,9 +110,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Langouste rôtie</h4>
+								<h4 class="foodcard__title">Langoustine poêlée</h4>
 								<p class="foodcard__description">
-									Et ses légumes de saison
+									Purée de patate douce
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -110,9 +124,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Côte de boeuf Angus</h4>
+								<h4 class="foodcard__title">Mijoté de queue de boeuf </h4>
 								<p class="foodcard__description">
-									Et sa purée de panais
+									Et riz sauvage aux zestes de citron
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -127,9 +141,9 @@
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Café gourmand</h4>
+								<h4 class="foodcard__title">Macaron noisette et chocolat/h4>
 								<p class="foodcard__description">
-									Du chef
+									Glace au caramel brun et sel de Guérande
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -141,9 +155,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Crème brulée </h4>
+								<h4 class="foodcard__title">Baba au rhum revisité</h4>
 								<p class="foodcard__description">
-									À la lavande
+									Avec son coulis de citron
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -155,9 +169,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tiramisu</h4>
+								<h4 class="foodcard__title">Tarte au citron meringuée </h4>
 								<p class="foodcard__description">
-									Speculoos-nutella
+									Déstructurée
 								</p>
 							</div>
 							<p class="foodcard__price">
