--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -9,7 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
@@ -20,12 +20,12 @@
 		</header>
 		<main>
 			<div class="background">
-				<img class="background__picture" src="layout/composants/images/lesapothicaires.jpeg">
+				<img class="background__picture" src="layout/composants/images/ledelicedessens.jpg">
 			</div>
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
-						Les apothicaires
+						Le délice des sens
 					</div>
 					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
@@ -37,9 +37,9 @@
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tomates</h4>
+								<h4 class="foodcard__title">Tartare de thon</h4>
 								<p class="foodcard__description">
-									Hollandaise safran vin jaune
+									Assaisonné au yuzu
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -51,13 +51,13 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Langoustines au BBQ</h4>
+								<h4 class="foodcard__title">Bouchée de homard croustillant </h4>
 								<p class="foodcard__description">
-									Guanciale, haricots, crème fermière
+									Et sa farandole de petits légumes
 								</p>
 							</div>
 							<p class="foodcard__price">
-								20€
+								35€
 							</p>
 							<div class="checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
@@ -65,13 +65,13 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Pigeon, zaatar, trévise</h4>
+								<h4 class="foodcard__title">Velouté de cèpes </h4>
 								<p class="foodcard__description">
-									Sauce prune-myrtille
+									Aux truffes
 								</p>
 							</div>
 							<p class="foodcard__price">
-								35€
+								20€
 							</p>
 							<div class="checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
@@ -82,9 +82,9 @@
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tartare de veau</h4>
+								<h4 class="foodcard__title">Poulet rôti aux herbes de Provence</h4>
 								<p class="foodcard__description">
-									Pata negra, asperges blanches
+									Et sa crème de truffe
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -96,9 +96,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Omble Chevalier</h4>
+								<h4 class="foodcard__title">Langouste rôtie</h4>
 								<p class="foodcard__description">
-									Jus de chou
+									Et ses légumes de saison
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -110,9 +110,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Lavaret fumé</h4>
+								<h4 class="foodcard__title">Côte de boeuf Angus</h4>
 								<p class="foodcard__description">
-									Et riz rouge de camargue
+									Et sa purée de panais
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -127,9 +127,9 @@
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Biscuit café</h4>
+								<h4 class="foodcard__title">Farandole de desserts</h4>
 								<p class="foodcard__description">
-									Sorbet gingembre
+									Du chef
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -141,9 +141,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Fraises</h4>
+								<h4 class="foodcard__title">Crème brulée </h4>
 								<p class="foodcard__description">
-									Crème cuite
+									Revisitée
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -155,9 +155,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tarte au chocolat</h4>
+								<h4 class="foodcard__title">Tiramisu</h4>
 								<p class="foodcard__description">
-									Sur un lit d'avocat
+									À la noisette
 								</p>
 							</div>
 							<p class="foodcard__price">
