--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -9,25 +9,25 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
 	<body>
 		<header class="header">
-            <div class="header__icon">
-			<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
-            </div>
-			<h1 class="header__logo">ohmyfood</h1>
+			<div class="header__icon">
+                <a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
+                </div>
+            <h1 class="header__logo">ohmyfood</h1>
 		</header>
 		<main>
 			<div class="background">
-				<img class="background__picture" src="layout/composants/images/cozna.jpeg">
+				<img class="background__picture" src="layout/composants/images/Lapalettedugout.jpg">
 			</div>
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
-						Cozna
+						La palette du goût
 					</div>
 					<div class="menu__favorite">
 						<i class="far fa-heart emptyheart"></i>
@@ -39,9 +39,9 @@
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Soupe de la mer</h4>
+								<h4 class="foodcard__title">Fricassée d'escargot</h4>
 								<p class="foodcard__description">
-									et sa crème de couteau
+									Au piment d'Espelette
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -53,9 +53,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Jardinière de légumes d'antan</h4>
+								<h4 class="foodcard__title">Foie gras de canard mi-cuit</h4>
 								<p class="foodcard__description">
-									Butternut et panais
+									Et ses copeaux de truffe noire
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -67,9 +67,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tartare de veau</h4>
+								<h4 class="foodcard__title">Oeuf au plat</h4>
 								<p class="foodcard__description">
-									et sa croziflette
+									Assaisonné à la truffe sur lit de caviar
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -84,9 +84,9 @@
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
+								<h4 class="foodcard__title">Filet de boeuf aux herbes</h4>
 								<p class="foodcard__description">
-									Accompagnées d'une purée de panais
+									Accompagné de sa ribambelle de légumes
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -98,9 +98,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Magret de canard</h4>
+								<h4 class="foodcard__title">Parmentier de queue de boeuf</h4>
 								<p class="foodcard__description">
-									Et gratin dauphinois
+									À la truffe noire sur sa purée de panais
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -112,9 +112,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Pigeonneau d’Ille-et-Vilaine</h4>
+								<h4 class="foodcard__title">Filet de turbot</h4>
 								<p class="foodcard__description">
-									Sur son lit de gnocchis aux légumes
+									Aux agrumes
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -129,9 +129,9 @@
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Sorbet de chartreuse</h4>
+								<h4 class="foodcard__title">Paris-Brest</h4>
 								<p class="foodcard__description">
-									Et mousse de noisettes
+									Revisité
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -143,9 +143,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Fondant au chocolat</h4>
+								<h4 class="foodcard__title">Macaron au chocolat d'exception</h4>
 								<p class="foodcard__description">
-									à la vanille de la réunion
+									Et glace à la vanille de Madagascar
 								</p>
 							</div>
 							<p class="foodcard__price">
@@ -157,9 +157,9 @@
 						</div>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Millefeuille alpin</h4>
+								<h4 class="foodcard__title">Mousse au chocolat</h4>
 								<p class="foodcard__description">
-									Myrtilles et mûres
+									Au piment d'Espelette et à la truffe noire
 								</p>
 							</div>
 							<p class="foodcard__price">
