vue defintive hors animation déroulante tous devices

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -27,6 +27,7 @@
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
+
 						À la française
 					</div>
 					<div class="menu__favorite">
@@ -47,8 +48,10 @@
 							<p class="foodcard__price">
 								25€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -61,8 +64,10 @@
 							<p class="foodcard__price">
 								35€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -75,8 +80,10 @@
 							<p class="foodcard__price">
 								20€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -92,8 +99,10 @@
 							<p class="foodcard__price">
 								40€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -106,8 +115,10 @@
 							<p class="foodcard__price">
 								35€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -120,8 +131,10 @@
 							<p class="foodcard__price">
 								44€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -137,8 +150,10 @@
 							<p class="foodcard__price">
 								18€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -151,8 +166,10 @@
 							<p class="foodcard__price">
 								22€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -165,8 +182,10 @@
 							<p class="foodcard__price">
 								23€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
