--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -47,8 +47,10 @@
 							<p class="foodcard__price">
 								25€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -61,8 +63,10 @@
 							<p class="foodcard__price">
 								35€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -75,8 +79,10 @@
 							<p class="foodcard__price">
 								20€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -92,8 +98,10 @@
 							<p class="foodcard__price">
 								40€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -106,8 +114,10 @@
 							<p class="foodcard__price">
 								35€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -120,8 +130,10 @@
 							<p class="foodcard__price">
 								44€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -137,8 +149,10 @@
 							<p class="foodcard__price">
 								18€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -151,8 +165,10 @@
 							<p class="foodcard__price">
 								22€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -165,8 +181,10 @@
 							<p class="foodcard__price">
 								23€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
