animation coche OK, sauf texte ellipsis qui n'affiche pas les ...

--- a/lanotenenchantee.html
+++ b/lanotenenchantee.html
@@ -155,7 +155,7 @@
 						<h3 class="foodtitle">DESSERTS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Macaron noisette et chocolat/h4>
+								<h4 class="foodcard__title">Macaron noisette et chocolat</h4>
 								<p class="foodcard__description">
 									Glace au caramel brun et sel de Guérande
 								</p>
