--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -45,8 +45,10 @@
 							<p class="foodcard__price">
 								25€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -59,8 +61,10 @@
 							<p class="foodcard__price">
 								35€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -73,8 +77,10 @@
 							<p class="foodcard__price">
 								20€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -90,8 +96,10 @@
 							<p class="foodcard__price">
 								40€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -104,8 +112,10 @@
 							<p class="foodcard__price">
 								35€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -118,8 +128,10 @@
 							<p class="foodcard__price">
 								44€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -135,8 +147,10 @@
 							<p class="foodcard__price">
 								18€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -149,8 +163,10 @@
 							<p class="foodcard__price">
 								22€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 						<div class="foodcard">
@@ -163,8 +179,10 @@
 							<p class="foodcard__price">
 								23€
 							</p>
-							<div class="checkcircle">
+							<div class="foodcard__check">
+								<div class="foodcard__checkcircle">
 								<i class="fas fa-check-circle iconecercle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
