--- a/lanotenenchantee.html
+++ b/lanotenenchantee.html
@@ -104,7 +104,7 @@
 						<h3 class="foodtitle">PLATS</h3>
 						<div class="foodcard">
 							<div class="foodcard__text">
-								<h4 class="foodcard__title">Noix de coquilles Saint-Jacques/h4>
+								<h4 class="foodcard__title">Noix de coquilles Saint-Jacques</h4>
 								<p class="foodcard__description">
 									Sur lit de purée de céleri-rave
 								</p>
