--- a/index.html
+++ b/index.html
@@ -137,14 +137,26 @@
 			<div class="footer__content">
 				<h3 class="footer__logo">Ohmyfood</h3>
 				<ul class="footer__link">
-					<a href="#">
-						<li class="footer__list"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</li>
-					</a>
-					<a href="#">
-						<li class="footer__list "><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</li>
-					</a>
-					<a href="#"><li class="footer__list">Mentions légales</li></a>
-					<a href="mailto:ohmyfood@ohmyfood.com"><li class="footer__list">Contact</li></a>
+					<li class="footer__list">
+						<a href="#">	
+							<i class="fas fa-utensils footer__list1"></i>Proposer un restaurant
+						</a>
+					</li>
+					<li class="footer__list ">
+						<a href="#">
+							<i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire
+						</a>
+					</li>
+					<li class="footer__list">
+						<a href="#">
+							Mentions légales
+						</a>
+					</li>
+					<li class="footer__list">
+						<a href="mailto:ohmyfood@ohmyfood.com">
+							Contact
+						</a>
+					</li>
 				</ul>
 			</div>
 		</footer>
