amélioration globale des animations

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -39,7 +39,7 @@
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
 						<div class="foodcard">
-							<div class="foodcard__text">
+							<div class="delay-0 foodcard__text">
 								<h4 class="foodcard__title">Tartare de poulpe acidulé</h4>
 								<p class="foodcard__description">
 									Aux zestes d'orange
@@ -54,7 +54,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-1 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Velouté de légumes d'antan</h4>
 								<p class="foodcard__description">
@@ -70,7 +70,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-2 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Soupe à l'oignon</h4>
 								<p class="foodcard__description">
@@ -89,7 +89,7 @@
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="foodcard">
+						<div class="delay3 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
 								<p class="foodcard__description">
@@ -105,7 +105,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-4 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Magret de canard</h4>
 								<p class="foodcard__description">
@@ -140,7 +140,7 @@
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="foodcard">
+						<div class="delay-5 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Pétales de violettes glacés</h4>
 								<p class="foodcard__description">
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-6 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Fondant au chocolat</h4>
 								<p class="foodcard__description">
@@ -172,7 +172,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-7 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Millefeuille croustillant</h4>
 								<p class="foodcard__description">
