--- a/lanotenenchantee.html
+++ b/lanotenenchantee.html
@@ -35,7 +35,7 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="foodcard">
+						<div class="delay-0 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Ravioles de foie gras </h4>
 								<p class="foodcard__description">
@@ -51,7 +51,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-1 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Caviar osciètre </h4>
 								<p class="foodcard__description">
@@ -67,7 +67,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-2 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Homard et espuma de potiron</h4>
 								<p class="foodcard__description">
@@ -83,7 +83,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-3 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Foie gras de canard cuit entier</h4>
 								<p class="foodcard__description">
@@ -102,7 +102,7 @@
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="foodcard">
+						<div class="delay-4 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Noix de coquilles Saint-Jacques</h4>
 								<p class="foodcard__description">
@@ -118,7 +118,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-5 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Langoustine poêlée</h4>
 								<p class="foodcard__description">
@@ -134,7 +134,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-6 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Mijoté de queue de boeuf </h4>
 								<p class="foodcard__description">
@@ -153,7 +153,7 @@
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="foodcard">
+						<div class="delay-7 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Macaron noisette et chocolat</h4>
 								<p class="foodcard__description">
@@ -169,7 +169,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-8 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Baba au rhum revisité</h4>
 								<p class="foodcard__description">
@@ -185,7 +185,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-9 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Tarte au citron meringuée </h4>
 								<p class="foodcard__description">
