--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -37,7 +37,7 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="foodcard">
+						<div class="delay-0 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Fricassée d'escargot</h4>
 								<p class="foodcard__description">
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-1 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Foie gras de canard mi-cuit</h4>
 								<p class="foodcard__description">
@@ -69,7 +69,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-2 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Oeuf au plat</h4>
 								<p class="foodcard__description">
@@ -88,7 +88,7 @@
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="foodcard">
+						<div class="delay-3 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Filet de boeuf aux herbes</h4>
 								<p class="foodcard__description">
@@ -104,7 +104,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-4 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Parmentier de queue de boeuf</h4>
 								<p class="foodcard__description">
@@ -120,7 +120,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-5 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Filet de turbot</h4>
 								<p class="foodcard__description">
@@ -139,7 +139,7 @@
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="foodcard">
+						<div class="delay-6 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Paris-Brest</h4>
 								<p class="foodcard__description">
@@ -155,7 +155,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-7 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Macaron au chocolat d'exception</h4>
 								<p class="foodcard__description">
@@ -171,7 +171,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-8 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Mousse au chocolat</h4>
 								<p class="foodcard__description">
