--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -35,7 +35,7 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="foodcard">
+						<div class="delay-0 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Tartare de thon</h4>
 								<p class="foodcard__description">
@@ -51,7 +51,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-1 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Bouchée de homard croustillant </h4>
 								<p class="foodcard__description">
@@ -67,7 +67,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-2 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Velouté de cèpes </h4>
 								<p class="foodcard__description">
@@ -86,7 +86,7 @@
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="foodcard">
+						<div class="delay-3 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Poulet rôti aux herbes de Provence</h4>
 								<p class="foodcard__description">
@@ -102,7 +102,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-4 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Langouste rôtie</h4>
 								<p class="foodcard__description">
@@ -118,7 +118,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-5 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Côte de boeuf Angus</h4>
 								<p class="foodcard__description">
@@ -137,7 +137,7 @@
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="foodcard">
+						<div class="delay-6 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Farandole de desserts</h4>
 								<p class="foodcard__description">
@@ -153,7 +153,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-7 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Crème brulée </h4>
 								<p class="foodcard__description">
@@ -169,7 +169,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
+						<div class="delay-8 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Tiramisu</h4>
 								<p class="foodcard__description">
